--- a/fronted/app/src/main/AndroidManifest.xml
+++ b/fronted/app/src/main/AndroidManifest.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+<!--  PERMISOS PARA CONEXIONES HTTP -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+<!-- PERMITIR LA CONEXION A HTTP   -->
+<!--    android:usesCleartextTraffic="true"  -->
+<!--LO IDEAL ES QUITARLA PARA PONERLA EN MODO DE PRODUCCION-->
     <application
+
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
