agregado roles en strapi y ordenado el modelo y apiService

--- a/backend/extensions/users-permissions/models/User.settings.json
+++ b/backend/extensions/users-permissions/models/User.settings.json
@@ -78,7 +78,7 @@
     },
     "Phone": {
       "type": "string",
-      "required": true,
+      "required": false,
       "maxLength": 9,
       "unique": true,
       "minLength": 8
