--- a/backend/api/config/models/config.settings.json
+++ b/backend/api/config/models/config.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "configs",
   "info": {
-    "name": "Config"
+    "name": "Config",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -38,6 +39,10 @@
       "type": "string",
       "required": true,
       "maxLength": 120
+    },
+    "Slogan": {
+      "type": "string",
+      "maxLength": 50
     }
   }
 }
