--- a/backend/api/orders/models/orders.settings.json
+++ b/backend/api/orders/models/orders.settings.json
@@ -33,6 +33,11 @@
     },
     "FreightCost": {
       "type": "decimal"
+    },
+    "Details": {
+      "type": "component",
+      "repeatable": true,
+      "component": "orders-details.details"
     }
   }
 }
