BD modificada directamente, sin errores de ejecucion

--- a/backend/api/products/models/products.settings.json
+++ b/backend/api/products/models/products.settings.json
@@ -45,10 +45,10 @@
     "Price": {
       "type": "decimal"
     },
-    "Colors": {
+    "Color": {
       "type": "component",
       "repeatable": true,
-      "component": "products-colors.colors"
+      "component": "products-colors.color"
     }
   }
 }
