Solo falta dar los permisos

--- a/backend/api/categories/models/categories.settings.json
+++ b/backend/api/categories/models/categories.settings.json
@@ -26,6 +26,10 @@
     "sub_categories": {
       "via": "category",
       "collection": "sub-categories"
+    },
+    "productsC": {
+      "via": "categories",
+      "collection": "products"
     }
   }
 }
