--- a/backend/api/products/models/products.settings.json
+++ b/backend/api/products/models/products.settings.json
@@ -12,43 +12,23 @@
   },
   "pluginOptions": {},
   "attributes": {
-    "SKU": {
-      "type": "string",
-      "unique": true,
-      "required": true,
-      "maxLength": 15
-    },
     "Name": {
       "type": "string",
       "required": true,
       "unique": true,
       "maxLength": 25
     },
-    "img": {
-      "model": "file",
-      "via": "related",
-      "allowedTypes": [
-        "images"
-      ],
-      "plugin": "upload",
-      "required": false,
-      "pluginOptions": {}
-    },
     "description": {
       "type": "string",
       "maxLength": 30
     },
-    "sub_categories": {
-      "via": "products",
-      "collection": "sub-categories"
-    },
     "Price": {
       "type": "decimal"
     },
-    "Color": {
-      "type": "component",
-      "repeatable": true,
-      "component": "products-colors.color"
+    "categories": {
+      "collection": "categories",
+      "via": "productsC",
+      "dominant": true
     }
   }
 }
