Ya se guarda en memoria caché y detecta si hay datos almacenados para poder trabajar offline

--- a/backend/api/products/models/products.settings.json
+++ b/backend/api/products/models/products.settings.json
@@ -20,10 +20,12 @@
     },
     "description": {
       "type": "string",
-      "maxLength": 30
+      "maxLength": 30,
+      "required": true
     },
     "Price": {
-      "type": "decimal"
+      "type": "decimal",
+      "required": true
     },
     "categories": {
       "collection": "categories",
@@ -37,7 +39,7 @@
         "images"
       ],
       "plugin": "upload",
-      "required": false,
+      "required": true,
       "pluginOptions": {}
     },
     "color": {
