--- a/backendStrapi/package.json
+++ b/backendStrapi/package.json
@@ -15,7 +15,9 @@
     "@strapi/plugin-users-permissions": "4.9.0",
     "@strapi/strapi": "4.9.0",
     "mysql": "2.18.1",
-    "strapi-plugin-graphs-builder": "^1.0.0"
+    "socket.io": "^4.6.1",
+    "strapi-plugin-graphs-builder": "^1.0.0",
+    "strapi-plugin-io": "^1.1.4"
   },
   "author": {
     "name": "A Strapi developer"
