--- a/fronted/app/build.gradle
+++ b/fronted/app/build.gradle
@@ -34,6 +34,10 @@ android {
 }
 
 dependencies {
+//    sockets
+    implementation ('io.socket:socket.io-client:2.0.0'){
+        exclude group: 'org.json', module: 'json'
+    }
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
