--- a/fronted/app/build.gradle
+++ b/fronted/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     // repositorio de git que nos permite implementar las imágenes
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+    // refrescar recycleview
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 }
