--- a/fronted/app/build.gradle
+++ b/fronted/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     // refrescar recycleview
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    // Animación de cargando listado
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
