Diseño de registera

--- a/fronted/app/build.gradle
+++ b/fronted/app/build.gradle
@@ -59,5 +59,6 @@ dependencies {
     // Animación de cargando listado
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     // Menú lateral
-    implementation ''
+    implementation 'androidx.drawerlayout:drawerlayout:1.2.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
 }
