--- a/fronted/app/build.gradle
+++ b/fronted/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     // Menú lateral
     implementation 'androidx.drawerlayout:drawerlayout:1.2.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    //Splash effect
+    implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
 }
