--- a/fronted/app/src/main/AndroidManifest.xml
+++ b/fronted/app/src/main/AndroidManifest.xml
@@ -9,12 +9,13 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_new_launcher"
+        android:icon="@drawable/icono"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.TiendaOnline"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".util.Enviroments">
         <activity
             android:name=".OfflLineActivity"
             android:exported="false" />
