--- a/fronted/app/src/main/AndroidManifest.xml
+++ b/fronted/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         android:theme="@style/Theme.TiendaOnline"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <receiver android:name=".util.AlarmOnFinished"
+            android:enabled="true"/>
         <activity
             android:name=".ui.ConfirmShopping.Confirm_ShoppingActivity"
             android:exported="false" />
